--- a/src/components/TeamSlider.css
+++ b/src/components/TeamSlider.css
@@ -8,9 +8,20 @@
   max-width: 150px;
   margin: 0 auto;
   border-radius: 50%;
+  box-shadow: 0px 20px 25px rgb(32, 31, 31);
 }
 
 .member-name {
   margin-top: 10px;
   font-weight: bold;
+}
+
+.member-description {
+  margin-top: 5px;
+  font-size: 0.9rem;
+  color: #666;
+}
+
+.team-slider button {
+  margin-top: 10px;
 }
