--- a/src/components/SocietyDetail.css
+++ b/src/components/SocietyDetail.css
@@ -1,14 +1,3 @@
-/* Ensure no vertical overflow */
-body,
-html {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  /* Prevent horizontal scrolling */
-  overflow-y: auto;
-  /* Allow vertical scrolling only if necessary */
-}
-
 /* Society image settings */
 .society-image {
   width: 100%;
@@ -56,6 +45,19 @@ html {
   font-size: 2rem;
   margin-bottom: 0.5rem;
 }
+
+.register-btn {
+  margin-top: -50px;
+  padding: 10px 20px;
+}
+
+@media (max-width: 768px) {
+  .register-btn {
+    width: 100%;
+    font-size: 16px;
+  }
+}
+
 
 /* Media query adjustments for smaller screens */
 @media (max-width: 768px) {
