--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,7 +5,7 @@
 }
 
 #navbar {
-  background: linear-gradient(rgba(154, 86, 162, 0.8), rgba(154, 86, 162, 0.7));
+  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(253, 253, 253, 0.7));
  /* margin-top: -40px; */
 }
 
@@ -24,7 +24,9 @@
 
 #navbar .nav-link {
   font-size: 1rem;
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: bold;
 }
+
+
 
